test_scores/negative_dimers/features/O00212.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O00212.pkl.xz